src/ui/pages/Settings/Settings.scss
.settings {
  display: flex !important;

  &.show {
    transform: translate3d(0, 0, 0);
    transition-duration: 0.5s;
  }

  &.hide {
    transform: translate3d(100%, 0, 0);
    transition-duration: 0.5s;
  }

  ion-header ion-toolbar {
    margin-top: 0.625rem;
  }

  ion-toolbar ion-buttons ion-button.close-button {
    background: var(--ion-color-light);
  }

  .settings-content {
    margin-top: 2rem;

    .settings-section-title {
      margin: 0.625rem 1.25rem;
    }
  }

  ion-card {
    margin: 0;
    display: flex;
    background: white;
    border-radius: 1rem;
    flex-direction: column;
    justify-content: space-evenly;
    padding: 0.5rem 1.25rem;
    box-shadow: none;
    --inner-border-width: 0;
    margin-bottom: 1.5rem;

    ion-list {
      padding: 0;
    }

    ion-item {
      --inner-padding-end: 0px;

      &::part(native) {
        padding: 0;
      }

      ion-icon {
        font-size: 1.5rem;

        &:first-child {
          margin-right: 1rem;
        }

        &:last-child {
          color: var(--ion-color-dark-grey);
        }
      }

      ion-icon,
      ion-label,
      ion-note {
        color: var(--ion-color-secondary);
      }

      ion-label {
        margin: 0.813rem 0;
        font-weight: 500;
      }
    }
  }

  @media screen and (min-width: 250px) and (max-width: 370px) {
    ion-header ion-toolbar {
      margin-top: 0.531rem;
    }

    .settings-content {
      margin-top: 1rem;
    }

    ion-card {
      padding: 0.5rem 1rem;
    }

    .settings-section-title,
    ion-item.security-item ion-label,
    ion-item.support-item ion-label,
    ion-note {
      font-size: 0.8rem;
    }

    ion-item.security-item,
    ion-item.support-item {
      ion-icon {
        font-size: 1.2rem;

        &:first-child {
          margin-right: 0.8rem;
        }
      }
    }
  }
}

